 gndview, gndinfo, gnd2ned added
#26 Dec 7 1997
 misc improvements
 added demo files
#27 Dec 9 1997
 double-click bug fixed
 check for Tcl/Tk version added
#28 Dec 14 1997
 invalid file name bug on Windows fixed
#29 Dec 14 1997
 improved file viewer; improved output NED quality
#30 March 10 1998
 some improvements on appearance
 Tk8.0-style menu (native widgets)
 fixed bug which prevented gned from starting from outside its dir.
#31 April 26 1998
 dummy makefile added
#32a May 1, 1998
 cc files added; GNED could now use the opp_arrowcoords command.
#32b May 4, 1998
 grammar files and opp_parsened command added; not finished yet!
 grammar files are now shared with NEDC!
#32c May 11, 1998
 bugfixes on unfinished code...
#33  July 20, 1998
 intermediate version
#34  July 24, 1998
 Pataki I. and Vincze G.' stuff
#34a-#38
 TOTAL REWRITE!!!
 internal data structure redesigned
 .gnd file format change (incompatible!)
 redesigned user interface
 arrow.cc rewritten
 display string format change:"p=m,50,50,50,50"
 ported to Windows (Borland C++ 5.0 project file included)
#39  Aug 28, 1998
 - first beta version. Still badly misses the capability of loading
   NED files directly!
#40  Aug 30, 1998
 - Second beta
#41  Dec 30, 1998
 - makefile renamed to makefile.in
 - bug with delete ('X') toolbar icon fixed
 - changes in the About box
#42  Sept 1998 - March 1999
 DEVELOPMENT VERSIONS:
 - Pataki Istvan and Vincze Gabor -- added the parser and a manager, .gnd files
   thrown out
#43-45b  March 1999 - April 1999
 DEVELOPMENT VERSIONS
 - parser and code generation rewritten
 - data structures redesigned
 - made two-way tool
 - user interface redesigned: place manager at left, toolbar icons, tooltips etc.
#46  May 1 1999
 GNED 1.2 ALPHA 1 released
#47 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
July 11, 1999
  - small fixes and enhancements